Correção nos testes.